--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -411,6 +411,7 @@ input:-internal-autofill-selected {
 
 .trending-post {
     display: flex;
+    border-bottom: 1px solid #ccc;
 }
 
 .trending-post .category {
