--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -446,6 +446,36 @@ input:-internal-autofill-selected {
 /* ---------------------------*/
 
 
+/*--------- COMMENTS */
+
+
+/* ---------------------------*/
+
+.comment-container {
+    overflow: hidden;
+}
+
+.comment-icon {
+    color: #b29f93;
+}
+
+.comentario {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.comentario .comment-author {
+    color: #e7d117;
+}
+
+
+/* END COMMENTS*/
+
+
+/* ---------------------------*/
+
+
 /*--------- FOOTER */
 
 
