--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -463,6 +463,7 @@ input:-internal-autofill-selected {
 .comment-container {
     overflow: hidden;
     font-family: "Roboto";
+    font-size: 12px;
 }
 
 .comment-icon {
