--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -492,13 +492,13 @@ input:-internal-autofill-selected {
     margin-left: 10px;
 }
 
-.comments-sharer .share-container {
+.comentarios-sharer .share-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.comments-sharer .share-container i {
+.comentarios-sharer .share-container i {
     color: #b29f93 !important;
 }
 
