--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -471,6 +471,7 @@ input:-internal-autofill-selected {
     font-family: "Roboto";
     font-size: 14px;
     position: relative;
+    display: flex;
 }
 
 .comment-icon {
