--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -498,7 +498,7 @@ input:-internal-autofill-selected {
     color: #e7d117;
 }
 
-.comentario .comment-content {
+.comentario .comment-text {
     margin-left: 10px;
 }
 
