--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -473,10 +473,20 @@ input:-internal-autofill-selected {
     margin: 5px 0;
 }
 
+.cancilleram .author-container {
+    margin: 10px 0;
+}
+
+.cancilleram .author-container span {
+    font-family: Georgia, serif;
+    font-size: 12px;
+}
+
 .cancilleram .author-container img {
     width: 35px;
     height: 35px;
     border-radius: 50%;
+    border: 2px solid #e7d117;
 }
 
 
