--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -494,11 +494,26 @@ input:-internal-autofill-selected {
 
 .prev-arrow::before {
     content: '';
-    width: 20px;
-    height: 20px;
+    width: 13px;
+    height: 13px;
+    display: inline-block;
     border: 2px solid #e7d117;
-    transform: rotateX(45deg);
+    border-right: 0px;
+    transform: rotate(45deg);
     background: transparent;
+    border-top: 0px;
+}
+
+.next-arrow::before {
+    content: '';
+    width: 13px;
+    height: 13px;
+    display: inline-block;
+    border: 2px solid #e7d117;
+    border-left: 0px;
+    transform: rotate(45deg);
+    background: transparent;
+    border-bottom: 0px;
 }
 
 
