--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -559,6 +559,11 @@ input:-internal-autofill-selected {
     text-align: left;
 }
 
+.am-logo {
+    width: 120px;
+    vertical-align: middle;
+}
+
 
 /* CANCILLER AM */
 
