--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -564,6 +564,10 @@ input:-internal-autofill-selected {
     vertical-align: middle !important;
 }
 
+.carr-nav {
+    display: flex;
+}
+
 
 /* CANCILLER AM */
 
