--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -568,6 +568,22 @@ input:-internal-autofill-selected {
     align-content: center;
 }
 
+button {
+    background: transparent;
+    border: none;
+    border-radius: 0px;
+    box-sizing: border-box;
+    color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: inherit;
+    font-weight: normal;
+    line-height: inherit;
+    outline: none;
+    padding: 0;
+    text-decoration: none;
+    vertical-align: inherit;
+}
+
 
 /* CANCILLER AM */
 
