--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -504,6 +504,7 @@ input:-internal-autofill-selected {
 .prev-arrow {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .prev-arrow::before {
@@ -573,6 +574,7 @@ input:-internal-autofill-selected {
 .carr-nav {
     display: flex;
     align-content: center;
+    justify-content: space-between;
 }
 
 button {
@@ -600,6 +602,11 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+}
+
+.slick-slide {
+    outline: 0;
 }
 
 
