--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -567,6 +567,38 @@ input:-internal-autofill-selected {
     overflow: hidden;
     padding: 0px;
     text-align: left;
+    transform: 300ms ease;
+}
+
+.slick-dots li {
+    display: none;
+}
+
+.slick-dots li.slick-active,
+.slick-dots li.slick-active+li,
+.slick-dots li.slick-active+li+li {
+    display: block;
+}
+
+.slick-dots li:nth-last-child(1),
+.slick-dots li:nth-last-child(2),
+.slick-dots li:nth-last-child(3) {
+    display: block;
+}
+
+.slick-dots li.slick-active~li:nth-last-child(1),
+.slick-dots li.slick-active~li:nth-last-child(2),
+.slick-dots li.slick-active~li:nth-last-child(3) {
+    display: none;
+}
+
+.slick-dots li.slick-active+li+li:nth-last-child(3),
+.slick-dots li.slick-active+li+li:nth-last-child(2),
+.slick-dots li.slick-active+li+li:nth-last-child(1),
+.slick-dots li.slick-active+li:nth-last-child(3),
+.slick-dots li.slick-active+li:nth-last-child(2),
+.slick-dots li.slick-active+li:nth-last-child(1) {
+    display: block;
 }
 
 .am-logo {
