--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -634,6 +634,11 @@ button {
     padding: 0px !important;
 }
 
+.instagram-profile {
+    display: flex;
+    justify-content: space-between;
+}
+
 
 /* ---------------------------*/
 
