--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -723,7 +723,7 @@ button {
     align-items: center;
     font-size: 15px;
     display: flex;
-    padding: 10px;
+    padding: 10px !important;
     border: 1px solid #ccc;
     margin: 5px 0;
     border-radius: 10px;
@@ -732,7 +732,7 @@ button {
 .ctf-tweet-content {
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 10px;
+    padding: 10px !important;
     margin-top: 5px;
 }
 
