--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -723,16 +723,18 @@ button {
     align-items: center;
     font-size: 15px;
     display: flex;
-    padding: 10px !important;
+    padding: 5px 10px !important;
     border: 1px solid #ccc;
-    margin: 5px 0;
-    border-radius: 10px;
+    margin-bottom: 5px;
+    border-top: 0px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .ctf-tweet-content {
     border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px !important;
+    border-bottom: 0px;
+    border-radius: 10px 10px 0px 0px;
+    padding: 5px 10px !important;
     margin-top: 5px;
 }
 
