--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -690,7 +690,7 @@ font-family: 'Playfair Display', serif;
     #ctf .ctf-author-box-link {
         font-family: 'Bree Serif';
         font-weight: normal;
-        color: #b29f93;
+        color: #b29f93 !important;
         font-size: 16px;
         display: flex;
         justify-content: center;
