--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -813,6 +813,23 @@ font-family: 'Playfair Display', serif;
     }
     /* END COMMENTS*/
     /* ---------------------------*/
+    /*--------- RENDER POSTS */
+    /* ---------------------------*/
+    
+    .render-posts {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    /* ---------------------------*/
+    /*--------- POST RENDERED */
+    /* ---------------------------*/
+    
+    .post-rendered .rendered-img {
+        background-position: center center;
+        background-size: cover;
+    }
+    /* END POST RENDERED*/
+    /* ---------------------------*/
     /*--------- FOOTER */
     /* ---------------------------*/
     
@@ -901,213 +918,4 @@ font-family: 'Playfair Display', serif;
     
     .footer-widget-1 #f2-tagcloud-2 {
         margin: 0 !important;
-    }
-    /* ---------------------------*/
-    /*--------- SINGLE POST */
-    /* ---------------------------*/
-    
-    .entry-header {
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 70vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        margin: 50px auto !important;
-        position: relative;
-    }
-    
-    .entry-header .post-info {
-        padding: 30px;
-        padding-top: 100px;
-        color: #fff;
-        background: rgba(0, 0, 0, 0);
-        background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 1) 100%);
-        background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 1) 100%);
-        background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 1) 100%);
-        background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 1) 100%);
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 1) 100%);
-    }
-    
-    .entry-title::before {
-        display: none !important;
-    }
-    
-    .entry-header .post-info h1 {
-        font-size: 35px;
-        font-family: 'Playfair Display', serif;
-    }
-    
-    .entry-meta {
-        margin-bottom: 0px !important;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    
-    .entry-meta img {
-        margin-right: 10px;
-    }
-    
-    .author-post__title {
-        font-family: 'Playfair Display', serif;
-        font-size: 14px;
-        color: #fff !important;
-    }
-    
-    .post-category,
-    .post-tags {
-        position: absolute;
-        font-family: 'Bree Serif', serif;
-        color: #b29f93;
-        background: #e7d117;
-        padding: 30px;
-        top: 30px;
-        padding: 5px 10px;
-        font-size: 17px;
-        left: 30px;
-    }
-    
-    .post-category ul {
-        margin: 0px;
-        padding: 0px;
-        list-style-type: none;
-    }
-    
-    .post-category a {
-        color: #fff !important;
-    }
-    
-    .post-tags {
-        right: -20px;
-        left: auto;
-        background: #b29f93;
-    }
-    
-    .post-tags p {
-        color: #fff;
-        text-transform: uppercase;
-        margin: 10px 0;
-    }
-    
-    .post-tags a {
-        display: block;
-        color: #fff;
-        font-size: 15px;
-        transition: 0.3s;
-    }
-    
-    .post-tags a:hover {
-        color: #e7d117 !important;
-    }
-    
-    .post-tags a::before {
-        content: '#';
-        display: inline-block;
-    }
-    
-    .timestamp {
-        font-size: 14px;
-    }
-    
-    .post-content {
-        display: grid;
-        grid-template-columns: 3fr 2fr;
-        grid-gap: 30px;
-    }
-    
-    .entry-content {
-        max-width: 100% !important;
-        margin: 0px !important;
-        padding: 0px !important;
-        font-family: 'Lato', sans-serif;
-        font-size: 16px;
-    }
-    
-    .entry .entry-content>* {
-        max-width: 100%;
-    }
-    /* ---------------------------*/
-    /*--------- SIDEBAR */
-    /* ---------------------------*/
-    
-    .additional-information-box,
-    .follow-us-box,
-    .subscribe-box {
-        font-weight: 300;
-        font-size: 16px;
-        font-family: "Lato", sans-serif;
-        padding: 20px 15px 24px 18px;
-    }
-    
-    .follow-us-box {
-        background-color: #000000;
-        color: #ffffff;
-    }
-    
-    .follow-us-box {
-        padding-right: 60px;
-    }
-    
-    .subscribe-box {
-        padding: 20px;
-        padding-right: 16px;
-    }
-    
-    .subscribe-box {
-        background-color: rgba(178, 159, 147, 0.2);
-        padding-left: 32px;
-        padding-right: 37px;
-    }
-    
-    .title {
-        font-family: "Playfair Display", serif;
-        font-weight: 400;
-        font-style: italic;
-        font-size: 21px;
-        line-height: 1.2;
-        margin-bottom: 10px;
-    }
-    
-    .subscribe-box form input {
-        width: 48%;
-        height: 39.5px;
-        font-size: 0.75rem;
-        padding-left: 18px;
-        padding-right: 10px;
-        margin-right: 0;
-    }
-    
-    .additional-information-box input,
-    .follow-us-box input,
-    .subscribe-box input {
-        height: 51px;
-        border: 1px solid #666666;
-        padding-left: 25px;
-        margin-right: 16px;
-        font-family: "Playfair Display", "Playfair Display SC", "Bree Serif", Georgia, "Times New Roman", Times, serif;
-        font-size: 16px;
-        font-style: italic;
-        color: #000000;
-    }
-    
-    .additional-information-box button[type=submit]:hover,
-    .follow-us-box button[type=submit]:hover,
-    .subscribe-box button[type=submit]:hover {
-        background-color: #ecdb45 !important;
-    }
-    
-    .subscribe-box form button {
-        display: inline-block;
-        font-size: 16px;
-    }
-    
-    .additional-information-box button[type=submit],
-    .follow-us-box button[type=submit],
-    .subscribe-box button[type=submit] {
-        text-align: center;
-        color: #000000;
-        font-family: "Bree Serif", "Playfair Display", "Playfair Display SC", "Bree Serif", Georgia, "Times New Roman", Times, serif;
-        font-size: 16px;
     }
