--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -819,6 +819,7 @@ font-family: 'Playfair Display', serif;
     .render-posts {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-gap: 30px;
     }
     /* ---------------------------*/
     /*--------- POST RENDERED */
