--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -833,6 +833,11 @@ font-family: 'Playfair Display', serif;
     .post-rendered .hovered {
         background-color: rgba(0, 0, 0, 0.3);
     }
+    
+    .post-data .post-category {
+        color: #c4afa1;
+        transform: rotate(90deg);
+    }
     /* END POST RENDERED*/
     /* ---------------------------*/
     /*--------- FOOTER */
