--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -850,10 +850,11 @@ font-family: 'Playfair Display', serif;
         color: #c4afa1;
         transform: rotate(270deg);
         border-top: 5px solid #e7d117;
-        padding-left: 30px;
+        padding-left: 40px;
         position: absolute;
         bottom: 18px;
         left: -43px;
+        font-size: 16px;
     }
     /* END POST RENDERED*/
     /* ---------------------------*/
