--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -842,18 +842,31 @@ font-family: 'Playfair Display', serif;
         height: 100%;
     }
     
+    .hovered .action-links {
+        color: #fff;
+        padding: 30px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .hovered .action-links {
+        color: #fff;
+    }
+    
     .post-data {
         display: flex;
+        position: relative;
     }
     
     .post-data .post-category {
         color: #c4afa1;
         transform: rotate(270deg);
-        border-top: 5px solid #e7d117;
+        border-top: 10px solid #e7d117;
         padding-left: 40px;
         position: absolute;
         bottom: 18px;
-        left: -43px;
+        left: -34px;
         font-size: 16px;
     }
     /* END POST RENDERED*/
