--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -864,6 +864,7 @@ font-family: 'Playfair Display', serif;
     .post-data {
         display: flex;
         position: relative;
+        width: 100%;
     }
     
     .post-data .post-category {
@@ -875,6 +876,18 @@ font-family: 'Playfair Display', serif;
         bottom: -19px;
         left: -12px;
         font-size: 16px;
+    }
+    
+    .post-data .post-title h3 {
+        color: #fff;
+        margin-bottom: 0px;
+        font-size: 16px;
+    }
+    
+    .post-data .post-title span.time-ago {
+        color: #c4afa1;
+        font-size: 12px;
+        font-family: 'Bree Serif', serif;
     }
     /* END POST RENDERED*/
     /* ---------------------------*/
