--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -870,12 +870,24 @@ font-family: 'Playfair Display', serif;
     .post-data .post-category {
         color: #c4afa1;
         transform: rotate(270deg);
-        border-top: 10px solid #e7d117;
-        padding-left: 50px;
+        /* border-top: 10px solid #e7d117; */
+        /* padding-left: 50px; */
         position: relative;
-        bottom: -19px;
-        left: -12px;
+        bottom: -17px;
+        /* left: -12px; */
         font-size: 16px;
+        height: 40px;
+        width: 40px;
+    }
+    
+    .post-data .post-category::before {
+        height: 10px;
+        content: '';
+        background: #e7d117;
+        width: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
     }
     
     .post-data .post-title h3 {
