--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -903,6 +903,13 @@ font-family: 'Playfair Display', serif;
         font-size: 16px;
     }
     
+    .post-data .post-title h3::before {
+        content: '';
+        width: 30%;
+        height: 2px;
+        background: #ccc;
+    }
+    
     .post-data .post-title span.time-ago {
         color: #c4afa1;
         font-size: 12px;
