--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -865,6 +865,8 @@ font-family: 'Playfair Display', serif;
         display: flex;
         position: relative;
         width: 100%;
+        height: 100%;
+        align-items: flex-end;
     }
     
     .post-data .post-category {
@@ -873,7 +875,7 @@ font-family: 'Playfair Display', serif;
         /* border-top: 10px solid #e7d117; */
         /* padding-left: 50px; */
         position: relative;
-        bottom: -35%;
+        bottom: 18%;
         /* left: -12px; */
         font-size: 16px;
         height: 40px;
