--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -832,13 +832,14 @@ font-family: 'Playfair Display', serif;
     }
     
     .post-rendered::before {
-        height: 10px;
+        width: 10px;
         content: '';
         background: #e7d117;
-        width: 100%;
+        height: 100%;
         position: absolute;
         bottom: -5px;
         left: 0px;
+        z-index: 2;
     }
     
     .post-rendered .rendered-img {
