--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -876,20 +876,20 @@ font-family: 'Playfair Display', serif;
     
     .post-data {
         display: flex;
-        position: relative;
         width: 100%;
         height: 100%;
         align-items: flex-end;
     }
     
-    .post-data .post-category {
+    .hovered .post-category {
         color: #c4afa1;
         transform: rotate(270deg);
-        position: relative;
-        bottom: 18%;
+        position: absolute;
+        bottom: 50%;
         font-size: 16px;
         height: 40px;
-        width: 40px;
+        width: 100%;
+        left: -122px;
     }
     
     .post-data .post-title {
