--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -803,6 +803,10 @@ font-family: 'Playfair Display', serif;
         margin-left: 10px;
     }
     
+    .comentario .comment-text p {
+        margin: 0px !important;
+    }
+    
     .comentarios-sharer .share-container {
         display: flex;
         justify-content: space-around;
