--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -745,6 +745,7 @@ font-family: 'Playfair Display', serif;
         -webkit-transform: translateX(0%);
         transform: translateX(0%);
         opacity: 0;
+        visibility: hidden;
     }
     
     .comentarios.sin-comentarios {
@@ -954,6 +955,7 @@ font-family: 'Playfair Display', serif;
     
     .post-rendered:hover .hovered {
         opacity: 1;
+        visibility: visible;
     }
     
     .post-rendered:hover .hovered .action-links {
