--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -739,7 +739,6 @@ font-family: 'Playfair Display', serif;
         display: flex;
         position: relative;
         left: 0;
-        transition: 300ms ease;
         /* Starting position */
         -moz-transform: translateX(0%);
         -webkit-transform: translateX(0%);
@@ -749,13 +748,13 @@ font-family: 'Playfair Display', serif;
     }
     
     .comentarios.sin-comentarios {
-        -moz-transform: none;
-        -webkit-transform: none;
-        transform: none;
+        -moz-transform: none !important;
+        -webkit-transform: none !important;
+        transform: none !important;
         /* Apply animation to this element */
-        -moz-animation: none;
-        -webkit-animation: none;
-        animation: none;
+        -moz-animation: none !important;
+        -webkit-animation: none !important;
+        animation: none !important;
     }
     
     .comentario {
@@ -951,7 +950,6 @@ font-family: 'Playfair Display', serif;
         -moz-animation: example1 40s linear infinite;
         -webkit-animation: example1 40s linear infinite;
         animation: example1 40s linear infinite;
-        visibility: visible;
     }
     
     .post-rendered:hover .hovered {
