--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -716,7 +716,7 @@ font-family: 'Playfair Display', serif;
     .comentarios-noshare {
         display: grid;
         grid-template-columns: 1fr 11fr;
-        margin: 10px 0;
+        padding: 10px 0;
         margin-left: 20px;
     }
     
