--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -826,9 +826,15 @@ font-family: 'Playfair Display', serif;
     /*--------- RENDER POSTS */
     /* ---------------------------*/
     
-    .render-posts {
+    .render-posts.grid2 {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-gap: 30px;
+    }
+    
+    .render-posts.grid3 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 30px;
     }
     /* ---------------------------*/
