--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -746,6 +746,7 @@ font-family: 'Playfair Display', serif;
         -webkit-transform: translateX(0%);
         transform: translateX(0%);
         opacity: 0;
+        transition: 0ms ease !important;
     }
     
     .comentarios.sin-comentarios {
