--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -924,6 +924,10 @@ font-family: 'Playfair Display', serif;
         left: -122px;
     }
     
+    .hovered .post-category {
+        color: #c4afa1;
+    }
+    
     .post-data .post-title {
         display: flex;
         flex-direction: column;
